# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
gendiff/: __init__.py  arg_parser.py  generate_diff.py  parse.py
gendiff/formatters/: __init__.py  json.py  stylish.py
hexlet_code/gendiff/: generate_diff.py  parse.py
hexlet_code/gendiff/formatters/: plain.py  stylish.py
hexlet_code/scripts/: gendiff.py
scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file2.json  file2.yml
