[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = "Difference Calculator"
authors = ["Nadia St"]
license = "none"
readme = "README.md"

packages = [
    { include = "scripts" },
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "scripts.gendiff:main"
